# audiostack-python

./: .codeclimate.yml  .gitignore  CHANGELOG.md  CONTRUBUTING.md  README.md  demp.py  example.py  example_sessions.py  increment_version.py  main copy.wav.reapeaks  main.wav.reapeaks  migration_guide.md  notes.md  notes.py  project.py  publish.sh  publish_ci.sh  pull_request_template.md  pyproject.toml  setup.py  test.py  test_aes.py  test_annotate.py  test_audio_form.py  test_documentation.py  test_end_to_end.py  test_hybrid.py  test_lexi.py  test_lexi_create.py  test_lexi_list.py  test_mastering.py  test_media.py  test_media_timeline.py  test_mixing.py  test_new_syntax.py  test_orchestrator.py  test_prod.py  test_production.py  test_production_layers.py  test_reduce.py  (+13 more)
.circleci/: config.yml  validate.sh
audiostack/: __init__.py
audiostack/audioform/: __init__.py  audioform.py
audiostack/content/: __init__.py  file.py  media.py  recommend.py  root_functions.py  script.py
audiostack/creator/: __init__.py  brief.py  creative_brief.py  story.py
audiostack/delivery/: __init__.py  encoder.py  video.py
audiostack/docs/: docs.py
audiostack/files/: __init__.py  file.py
audiostack/folders/: __init__.py  folder.py
audiostack/helpers/: api_item.py  api_list.py  file_path.py  request_interface.py  response.py
audiostack/orchestrator/: __init__.py  audioform.py
audiostack/production/: __init__.py  mix.py  sound.py  suite.py
olldddd/: __init__.py
other/: new_script_notes.py
recipes/: media_files.py  tts_conversation.py
scratchpad/: demo.py  test.py  test_error_handle.py  test_funke.py  test_lexi_create.py  test_lexi_list.py  test_media.py  test_normaliser.py  test_openai.py  test_production.py  test_recommendtag.py  test_response.py  test_script.py  test_script_split.py  test_sound.py  test_speech.py  test_voice.py
tests/: epic_burgers.py  test_audience.py
(+40 files in other folders)
